--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,9 @@
     "dockerfile": "./Dockerfile"
   },
   "features": {
+    "ghcr.io/devcontainers/features/git:1": {},
     // "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/stuartleeks/dev-container-features/shell-history": {}
+    "ghcr.io/stuartleeks/dev-container-features/shell-history": {},
     // "ghcr.io/mikaello/devcontainer-features/modern-shell-utils:2": {}
   },
   "mounts": [],
@@ -13,6 +14,7 @@
     "vscode": {
       "extensions": [],
       "settings": {
+        // "git.branchProtection": ["main"],
         "editor.tabSize": 4,
         "terminal.integrated.defaultProfile.linux": "zsh",
         "terminal.integrated.profiles.linux": {
