--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,11 @@
     "ghcr.io/devcontainers/features/git:1": {},
     // "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/stuartleeks/dev-container-features/shell-history": {},
-    // "ghcr.io/mikaello/devcontainer-features/modern-shell-utils:2": {}
+    "ghcr.io/mikaello/devcontainer-features/modern-shell-utils:2": {}
   },
-  "mounts": [],
+  "mounts": [
+    "source=${localEnv:HOME}/.ssh/id_ed25519,target=/home/vscode/.ssh/id_ed25519,type=bind,consistency=cached"
+  ],
   "customizations": {
     "vscode": {
       "extensions": [],
