--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,13 +4,16 @@
     "dockerfile": "./Dockerfile"
   },
   "features": {
-    "ghcr.io/devcontainers/features/git:1": {},
+    // "ghcr.io/devcontainers/features/git:1.3.3": {},
     // "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/stuartleeks/dev-container-features/shell-history": {},
-    "ghcr.io/mikaello/devcontainer-features/modern-shell-utils:2": {}
+    // "ghcr.io/stuartleeks/dev-container-features/shell-history": {}
   },
   "mounts": [
-    "source=${localEnv:HOME}/.ssh/id_ed25519,target=/home/vscode/.ssh/id_ed25519,type=bind,consistency=cached"
+    "source=${localEnv:HOME}/.ssh/id_ed25519,target=/root/.ssh/id_ed25519,type=bind,consistency=cached"
+  ],
+  "runArgs": [
+    "--name",
+    "devcontainerb"
   ],
   "customizations": {
     "vscode": {
@@ -41,5 +44,6 @@
         }
       }
     }
-  }
+  },
+  "postCreateCommand": "echo 'DONE';"
 }
