--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,49 +1,36 @@
 {
-  "name": "devcontainerb",
+  "name": "⚡ ⚡ devcontainerb ⚡ ⚡",
   "build": {
     "dockerfile": "./Dockerfile"
   },
   "features": {
-    // "ghcr.io/devcontainers/features/git:1.3.3": {},
-    // "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    // "ghcr.io/stuartleeks/dev-container-features/shell-history": {}
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
   "mounts": [
-    "source=${localEnv:HOME}/.ssh/id_ed25519,target=/root/.ssh/id_ed25519,type=bind,consistency=cached"
+    "source=${localEnv:HOME}/.zsh_history,target=/root/.zsh_history,type=bind",
+    "source=aws-sso-cache,target=/root/.aws/sso,type=volume",
+    "source=${localWorkspaceFolder}/.devcontainer,target=/workspaces/b6n/.devcontainer,type=bind",
+    "source=${localWorkspaceFolder}/notebooks,target=/workspaces/b6n/notebooks,type=bind"
   ],
-  "runArgs": [
-    "--name",
-    "devcontainerb"
-  ],
+  "runArgs": [],
   "customizations": {
     "vscode": {
       "extensions": [],
       "settings": {
-        // "git.branchProtection": ["main"],
         "editor.tabSize": 4,
         "terminal.integrated.defaultProfile.linux": "zsh",
         "terminal.integrated.profiles.linux": {
-          "bash": {
-            "path": "bash",
-            "icon": "terminal-bash"
-          },
           "zsh": {
             "path": "zsh"
-          },
-          "fish": {
-            "path": "fish"
-          },
-          "tmux": {
-            "path": "tmux",
-            "icon": "terminal-tmux"
-          },
-          "pwsh": {
-            "path": "pwsh",
-            "icon": "terminal-powershell"
           }
         }
       }
     }
   },
-  "postCreateCommand": "echo 'DONE';"
+  "containerEnv": {
+    "HISTFILE": "/root/.zsh_history",
+    "HISTSIZE": "100000",
+    "SAVEHIST": "100000"
+  },
+  "postCreateCommand": "/workspaces/b6n/.devcontainer/setup-git-safe.sh"
 }
