--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,11 +10,15 @@
     "source=${localEnv:HOME}/.zsh_history,target=/root/.zsh_history,type=bind",
     "source=${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind",
     "source=aws-sso-cache,target=/root/.aws/sso,type=volume",
+    "source=${localWorkspaceFolder}/devcontainerb,target=/workspaces/b6n/devcontainerb,type=bind",
     "source=${localWorkspaceFolder}/.devcontainer,target=/workspaces/b6n/.devcontainer,type=bind",
     "source=${localWorkspaceFolder}/notebooks,target=/workspaces/b6n/notebooks,type=bind",
     "source=${localWorkspaceFolder}/llibrariam,target=/workspaces/b6n/llibrariam,type=bind"
   ],
-  "runArgs": [],
+  "runArgs": [
+    "--name",
+    "devcontainerb"
+  ],
   "customizations": {
     "vscode": {
       "extensions": [],
